# logfire

./: .coverage.LXMF33PJ4Hmac_local.pid52338.X6oupSHx.H0LUgtyESRVh  .coverage.LXMF33PJ4Hmac_local.pid52485.XD6q4PJx.H0LUgtyESRVh  .coverage.LXMF33PJ4Hmac_local.pid52624.XTXOjQtx.H0LUgtyESRVh  .coverage.LXMF33PJ4Hmac_local.pid52716.XoDQKdix.HlTGqvF9G6Oh  .coverage.LXMF33PJ4Hmac_local.pid52847.XcvUGiRx.HXexVqoWhxph  .gitignore  .pre-commit-config.yaml  .remaining_files.txt  AGENTS.md  BUILD  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HISTORY.md  Makefile  README.md  compose.yml  mkdocs.yml  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/commands/: update-deps.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature-request.yml  platform-bug.yml  question.yml  sdk-bug.yml
.github/workflows/: check_changelog.yml  claude.yml  copilot-setup-steps.yml  daily_deps_test.yml  deps_weekly_upgrade.yml  docs-preview.yml  main.yml  test.yml  weekly_deps_test.yml
.hyperlint/: README.md
dev-docs/: documentation-style-guide.md
docs/: AGENTS.md  ai-observability.md  api.md  audit-logs-api.md  auto_tracing.md  backfill.md  compliance.md  concepts.md  configuration.md  enterprise-single-tenant.md  enterprise.md  examples.md  faq.md  gateway-migration.md  help.md  index.md  install.md  integrations.md  languages.md  logfire-costs.md  metrics.md  nav.json  navigation.yml  release-notes.md  roadmap.md  sampling.md  testing.md  troubleshooting.md  why-logfire.md  why.md
docs/advanced/: backfill.md  sampling.md  testing.md
docs/api/: backfill.md  dash.md  logfire.md  propagate.md  sampling.md  testing.md
docs/comparisons/: arize-phoenix.md  braintrust.md  datadog.md  grafana.md  index.md  langfuse.md  langsmith.md  sentry.md  signoz.md
docs/cookbook/: debug-a-slow-endpoint.md  debug-a-slow-tool-call.md  evaluate-an-agent.md  fastapi.md  index.md  roll-out-a-prompt-safely.md  track-llm-cost.md
docs/evaluate/: human-review.md  overview.md
docs/examples/: fastapi.md  image_transformation.md  index.md  (+2 more)
logfire/: BUILD  __init__.py  __main__.py  _ast_utils.py  _async.py  _auth.py  _auto_instrument.py  _collect_system_info.py  _config.py  _config_params.py  _constants.py  _context.py  _dash.py  _flatten.py  _formatter.py  _instrument.py  _json_encoder.py  _json_formatter.py  _json_schema.py  _json_types.py  _limits.py  _login.py  _main.py  _metrics.py  _observe.py  _sampling.py  _scrubbing.py  _stack_info.py  _tracer.py  _utils.py  api_client.py  args_formatter.py  backfill.py  baggage.py  cli.py  config.py  credentials.py  current_span.py  dash.py  db_api.py  (+12 more)
logfire-api/: README.md  pyproject.toml
logfire-api/logfire_api/: __init__.py  __init__.pyi  current_span.pyi  db_api.pyi  exceptions.pyi  propagate.pyi  query_client.pyi  types.pyi
logfire-api/logfire_api/_internal/: artifacts.pyi  ast_utils.pyi  async_.pyi  auth.pyi  backfill.pyi  baggage.pyi  cli.pyi  client.pyi  collect_system_info.pyi  config.pyi  config_params.pyi  constants.pyi  db_statement_summary.pyi  formatter.pyi  forwarding.pyi  instrument.pyi  json_encoder.pyi  json_formatter.pyi  json_schema.pyi  json_types.pyi  logs.pyi  main.pyi  metrics.pyi  scrubbing.pyi  server_response.pyi  stack_info.pyi  tracer.pyi  ulid.pyi  utils.pyi
logfire-api/logfire_api/_internal/auto_trace/: __init__.pyi  import_hook.pyi  rewrite_ast.pyi  types.pyi
logfire-api/logfire_api/_internal/cli/: ai_tools.pyi  auth.pyi  gateway.pyi  gateway_auth.pyi  prompt.pyi  run.pyi
logfire-api/logfire_api/_internal/exporters/: artifact_uploader.pyi  console.pyi  dynamic_batch.pyi  fallback.pyi  file.pyi  logs.pyi  otlp.pyi  processor_wrapper.pyi  quiet_metrics.pyi  remove_pending.pyi  tail_sampling.pyi  wrapper.pyi
logfire-api/logfire_api/_internal/integrations/: aiohttp_client.pyi  aiohttp_server.pyi  asgi.pyi  asyncpg.pyi  aws_lambda.pyi  celery.pyi  claude_agent_sdk.pyi  django.pyi  executors.pyi  fastapi.pyi  flask.pyi  google_genai.pyi  httpx.pyi  langchain.pyi  mcp.pyi  mysql.pyi  openai_agents.pyi  psycopg.pyi  pydantic_ai.pyi  pymongo.pyi  pytest.pyi  redis.pyi  requests.pyi  sqlalchemy.pyi  sqlite3.pyi  starlette.pyi  surrealdb.pyi  system_metrics.pyi  wsgi.pyi
logfire-api/logfire_api/experimental/: __init__.pyi  annotations.pyi  annotations_api.pyi  api_client.pyi  evaluation.pyi  forwarding.pyi  query_client.pyi
logfire-api/logfire_api/integrations/: celery.pyi  httpx.pyi  logging.pyi  loguru.pyi  pydantic.pyi  structlog.pyi
logfire-api/logfire_api/sampling/: __init__.pyi  _tail_sampling.pyi
logfire-api/logfire_api/variables/: __init__.pyi  _handlebars.pyi  abstract.pyi  composition.pyi  config.pyi  local.pyi  push.pyi  remote.pyi  template_validation.pyi  variable.pyi
logfire-api/src/logfire_api/: __init__.py
logfire-noop/: README.md  pyproject.toml  update_version.py
logfire-noop/logfire_noop/: __init__.py  propagate.py  testing.py  version.py
logfire-noop/tests/: test_match_objects.py
plans/: 2026-03-24-claude-agent-sdk-integration-design.md  datasets-future-work.md  prompt-mgmt-docs-structure.md  prompt-mgmt-release-concerns.md
pyodide_test/: package-lock.json  package.json  test.mjs
release/: README.md  prepare.py  push.py  shared.py
scripts/: docs_serve.py
tests/: AGENTS.md  BUILD  __init__.py  _inline_snapshot.py  conftest.py  module_used_for_tests.py  test_ag2.py  test_annotations.py  test_annotations_api.py  test_annotations_client.py  test_api_client.py  test_artifacts.py  test_asgi.py  test_auth.py  test_auto_instrumentation.py  test_auto_trace.py  test_backfill.py  test_baggage.py  test_canonicalize_exception.py  test_cli.py  test_client.py  test_collect_package_resources.py  test_configure.py  test_console_exporter.py  test_datasets_client.py  test_db_api.py  test_db_statement_summary.py  test_docs.py  test_docs_serve.py  test_evaluation_sink.py  test_exceptions.py  test_experimental_forwarding.py  test_formatter.py  test_internal_forwarding.py  test_json_args.py  test_json_args_formatting.py  test_llm_provider.py  test_logfire.py  test_logfire_api.py  test_logfire_noop.py  (+35 more)
(+907 files in other folders)
