[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "logfire-api"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Marcelo Trylesinski", email = "marcelotryle@gmail.com" }]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["logfire_api"]
