[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "logfire-api"
version = "3.16.2"
description = "Shim for the Logfire SDK which does nothing unless Logfire is installed"
authors = [
    { name = "Pydantic Team", email = "engineering@pydantic.dev" },
    { name = "Samuel Colvin", email = "samuel@pydantic.dev" },
    { name = "Hasan Ramezani", email = "hasan@pydantic.dev" },
    { name = "Adrian Garcia Badaracco", email = "adrian@pydantic.dev" },
    { name = "David Montague", email = "david@pydantic.dev" },
    { name = "Marcelo Trylesinski", email = "marcelo@pydantic.dev" },
    { name = "David Hewitt", email = "david.hewitt@pydantic.dev" },
    { name = "Alex Hall", email = "alex@pydantic.dev" },
]
dependencies = []
readme = "README.md"
license = "MIT"
requires-python = ">= 3.8"

[tool.uv]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["logfire_api"]
